SplashActivity 추가, List Error 처리

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <!--  App  -->
     <string name="app_name">Green Day</string>
 
+    <!--  Splash  -->
+    <string name="splash" translatable="false">ΓΔ</string>
+
     <!--  Main Menu  -->
     <string name="main_menu_track_list">Track List</string>
     <string name="main_menu_favorite">Favorite</string>
